examples/java/failing/left_right_class/ExpectedCurrently.java
<<<<<<< LEFT
class MyCls {
        int a;
        boolean c;
        char d;
}
||||||| BASE
=======
class MyCls {
        String b;
        boolean c;
        char d;
}
>>>>>>> RIGHT